[workspace]
members = ["constants", "io", "loader", "log-types", "profiler-types", "snp-types", "supervisor-services", "tdx-types"]
resolver = "2"

[workspace.dependencies]
constants = { path = "constants" }
io = { path = "io" }
snp-types = { path = "snp-types" }
tdx-types = { path = "tdx-types" }

[workspace.package]
edition = "2024"

[patch.crates-io]
x86_64 = { git = "https://github.com/rust-osdev/x86_64.git", rev = "7ae7da5" }
