[workspace]
members = ["mushroom", "mushroom-verify", "qgs-client", "vcek-kds"]
resolver = "2"

[workspace.dependencies]
mushroom-verify = { path = "mushroom-verify", default-features = false }
constants = { path = "../common/constants" }
io = { path = "../common/io" }
loader = { path = "../common/loader" }
log-types = { path = "../common/log-types" }
profiler-types = { path = "../common/profiler-types" }
qgs-client = { path = "qgs-client" }
snp-types = { path = "../common/snp-types" }
supervisor-services = { path = "../common/supervisor-services" }
tdx-types = { path = "../common/tdx-types", features = ["quote"] }
vcek-kds = { path = "vcek-kds" }

[workspace.package]
edition = "2024"

[patch.crates-io]
bytemuck = { git = "https://github.com/Freax13/bytemuck.git", rev = "91faa12" }
x86_64 = { git = "https://github.com/rust-osdev/x86_64.git", rev = "59ac07c" }

[profile.dev.package.sha2]
opt-level = 3
