cargo-features = ["profile-rustflags"]

[workspace]
members = ["init", "kernel", "serial-log", "supervisor"]

[workspace.dependencies]
constants = { path = "../common/constants" }
io = { path = "../common/io" }
serial-log = { path = "serial-log" }
snp-types = { path = "../common/snp-types" }

[profile.kernel]
inherits = "release"
opt-level = 3
debug-assertions = true
overflow-checks = true

[profile.supervisor]
inherits = "release"
opt-level = "z"
lto = "thin"
debug-assertions = true
overflow-checks = true
# https://github.com/rust-lang/rust/issues/108853
rustflags = ["-Zshare-generics=off"]

[profile.supervisor-release]
inherits = "release"
opt-level = "z"
lto = "thin"
debug-assertions = true
overflow-checks = true
# https://github.com/rust-lang/rust/issues/108853
rustflags = ["-Zshare-generics=off"]

[patch.crates-io]
bytemuck = { git = "https://github.com/Freax13/bytemuck.git", rev = "e63ffe8d10129a70a28fcad2bf656782bec8d4bb" }
