cargo-features = ["profile-rustflags"]

[workspace]
members = ["init", "kernel", "kernel-macros", "supervisor", "tests"]
resolver = "2"

[workspace.dependencies]
constants = { path = "../common/constants" }
io = { path = "../common/io" }
kernel-macros = { path = "kernel-macros" }
profiler-types = { path = "../common/profiler-types" }
snp-types = { path = "../common/snp-types" }

[profile.kernel]
inherits = "release"
opt-level = 3
debug-assertions = true
overflow-checks = true
rustflags = ["-Ctarget-cpu=znver3"]

[profile.kernel-profiling]
inherits = "kernel"
# LTO may cause multiple `mcount` calls per function.
lto = "off"

[profile.supervisor]
inherits = "release"
opt-level = "z"
lto = "thin"
debug-assertions = true
overflow-checks = true

[profile.supervisor-release]
inherits = "release"
opt-level = "z"
lto = "thin"
debug-assertions = true
overflow-checks = true

[patch.crates-io]
bytemuck = { git = "https://github.com/Freax13/bytemuck.git", rev = "e63ffe8d10129a70a28fcad2bf656782bec8d4bb" }
