cargo-features = ["profile-rustflags"]

[workspace]
members = ["example", "external-tests", "kernel", "kernel-macros", "static-page-tables", "supervisor-snp", "supervisor-tdx", "tests"]
resolver = "2"

[workspace.dependencies]
constants = { path = "../common/constants" }
io = { path = "../common/io" }
kernel-macros = { path = "kernel-macros" }
log-types = { path = "../common/log-types" }
profiler-types = { path = "../common/profiler-types" }
snp-types = { path = "../common/snp-types" }
tdx-types = { path = "../common/tdx-types" }
static-page-tables = { path = "static-page-tables" }
supervisor-services = { path = "../common/supervisor-services" }

[workspace.package]
edition = "2024"

[profile.kernel]
inherits = "release"
opt-level = 3
debug-assertions = true
overflow-checks = true
rustflags = ["-Ctarget-cpu=znver3"]

[profile.kernel-profiling]
inherits = "kernel"
# LTO may cause multiple `mcount` calls per function.
lto = "off"

[profile.supervisor]
inherits = "release"
opt-level = "z"
lto = "thin"
debug-assertions = true
overflow-checks = true

[profile.supervisor-release]
inherits = "release"
opt-level = "z"
lto = "thin"
debug-assertions = true
overflow-checks = true

[patch.crates-io]
bytemuck = { git = "https://github.com/Freax13/bytemuck.git", rev = "91faa12" }
x86_64 = { git = "https://github.com/rust-osdev/x86_64.git", rev = "59ac07c" }
