[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[dependencies]
constants = { workspace = true }
bit_field = "0.10.2"
bytemuck = { version = "1.15.0", features = ["min_const_generics"] }
goblin = "0.8.0"
io = { workspace = true }
itertools = { version = "0.12.1", default-features = false }
snp-types = { workspace = true }
thiserror = { version = "1.0.58" }
raw-cpuid = "11.0.1"
x86_64 = "0.15.0"
