[package]
name = "loader"
version = "0.1.0"
edition.workspace = true

[dependencies]
constants = { workspace = true }
bit_field = "0.10.2"
bytemuck = { version = "1.15.0", features = ["min_const_generics"] }
goblin = "0.9.2"
io = { workspace = true }
snp-types = { workspace = true }
raw-cpuid = "11.0.1"
x86_64 = { version = "0.15.1", default-features = false }
