[package]
name = "snp-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.4.2", features = ["bytemuck"] }
bit_field = "0.10.2"
bytemuck = { version = "1.15.0", features = ["derive", "min_const_generics"] }
paste = "1.0.14"
x86_64 = "0.15.1"
