[package]
name = "snp-types"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.4.2", features = ["bytemuck"] }
bit_field = "0.10.2"
bytemuck = { version = "1.15.0", features = ["derive", "min_const_generics"] }
paste = "1.0.14"
serde = { version = "1.0.210", features = ["derive"], optional = true }
x86_64 = { version = "0.15.1", default-features = false }
