[package]
name = "snp-types"
version = "0.1.0"
edition.workspace = true

[dependencies]
bit_field = "0.10.2"
bitflags = { version = "2.4.2", features = ["bytemuck"] }
bytemuck = { version = "1.15.0", features = ["derive", "min_const_generics"] }
p384 = { version = "0.13.1", optional = true }
paste = "1.0.14"
serde = { version = "1.0.210", features = ["derive"], optional = true }
x86_64 = { version = "0.15.1", default-features = false }
