[package]
name = "mushroom-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive", "min_const_generics"] }
loader = { workspace = true }
io = { workspace = true }
p384 = "0.13.0"
sha2 = "0.10.8"
snp-types = { workspace = true }
vcek-kds = { workspace = true }
