[package]
name = "mushroom"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mushroom"
required-features = ["bin"]

[features]
bin = ["dep:clap", "dep:mushroom-verify"]

[dependencies]
anyhow = "1.0.81"
bit_field = "0.10.2"
bitflags = "2.4.2"
bytemuck = { version = "1.15.0", features = ["derive", "min_const_generics", "extern_crate_std"] }
clap = { version = "4.5.2", features = ["derive", "env"], optional = true }
constants = { workspace = true }
libc = "0.2.153"
loader = { workspace = true }
log-types = { workspace = true, features = ["std"] }
mushroom-verify = { workspace = true, optional = true }
nix = { version = "0.28.0", features = ["fs", "ioctl", "mman", "pthread", "signal"] }
profiler-types = { workspace = true }
rand = "0.8.5"
snp-types = { workspace = true }
supervisor-services = { workspace = true, features = ["supervisor"], default-features = false }
tdx-types = { workspace = true }
tokio = { version = "1.36.0", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
vcek-kds = { workspace = true }
volatile = { version = "0.5.1", features = ["unstable"] }
x86_64 = "0.15.1"
