[package]
name = "mushroom"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mushroom"
required-features = ["bin"]

[features]
default = ["insecure", "snp", "tdx", "bin"]
insecure = ["dep:snp-types", "dep:supervisor-services"]
snp = ["mushroom-verify?/snp", "dep:snp-types", "dep:vcek-kds"]
tdx = ["mushroom-verify?/tdx", "dep:qgs-client", "dep:tdx-types"]
bin = ["dep:clap", "dep:mushroom-verify", "dep:tokio", "dep:tracing-subscriber", "dep:xdg"]

[dependencies]
anyhow = "1.0.81"
bit_field = "0.10.2"
bitflags = { version = "2.4.2", features = ["bytemuck"] }
bytemuck = { version = "1.15.0", features = ["derive", "min_const_generics", "extern_crate_std"] }
clap = { version = "4.5.2", features = ["derive", "env"], optional = true }
constants = { workspace = true }
loader = { workspace = true }
log-types = { workspace = true, features = ["std"] }
mushroom-verify = { workspace = true, optional = true }
nix = { version = "0.28.0", features = ["fs", "ioctl", "mman", "pthread", "signal"] }
profiler-types = { workspace = true }
qgs-client = { workspace = true, optional = true }
rand = "0.8.5"
snp-types = { workspace = true, optional = true }
supervisor-services = { workspace = true, features = ["supervisor"], default-features = false , optional = true}
tdx-types = { workspace = true, optional = true }
tokio = { version = "1.36.0", features = ["fs", "macros", "rt-multi-thread"], optional = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", optional = true }
vcek-kds = { workspace = true, optional = true }
volatile = { version = "0.5.1", features = [] }
x86_64 = { version = "0.15.1", default-features = false }
xdg = { version = "2.5.2", optional = true }
