[package]
name = "vcek-kds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p384 = "0.13.0"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }
rsa = "0.9.6"
sha2 = "0.10.8"
snp-types = { workspace = true }
thiserror = "2.0.9"
x509-cert = { version = "0.2.5", default-features = false }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["ioctl"] }
bytemuck = { version = "1.19.0", features = ["extern_crate_std"] }
