cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-none"

[features]
harden = ["log/max_level_off", "log/release_max_level_off"]

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
async-trait = "0.1.72"
bit_field = "0.10.1"
bitflags = "1.3.2"
bytemuck = { version = "1.13.0", features = ["derive"] }
constants = { workspace = true }
crossbeam-queue = { version = "0.3.8", default-features = false, features = ["alloc"] }
crossbeam-utils = { version = "0.8.16", default-features = false }
futures = { version = "0.3.28", default-features = false, features = ["async-await", "alloc"] }
goblin = { version = "0.6.0", default-features = false, features = ["elf64", "elf32", "endian_fd"] }
kernel-macros.workspace = true
log = { version = "0.4.17", default-features = false }
serial-log = { workspace = true }
spin = { version = "0.9.4" }
x86_64 = { git = "https://github.com/rust-osdev/x86_64", rev = "bae6119533f19cd5c3557d5a302524f1d72456c5" }
