cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-none"

[features]
harden = ["log/max_level_off", "log/release_max_level_off"]
profiling = ["log/max_level_off", "log/release_max_level_off", "dep:profiler-types"]

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
async-trait = "0.1.77"
bit_field = "0.10.2"
bitflags = { version = "2.4.2", features = ["bytemuck"] }
bytemuck = { version = "1.15.0", features = ["derive", "min_const_generics"] }
constants = { workspace = true }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
crossbeam-utils = { version = "0.8.19", default-features = false }
futures = { version = "0.3.30", default-features = false, features = ["async-await", "alloc"] }
kernel-macros.workspace = true
linkme = "0.3.25"
log = { version = "0.4.21", default-features = false }
profiler-types = { workspace = true, optional = true }
static-page-tables = { workspace = true }
usize_conversions = "0.2.0"
x86_64 = "0.15.1"
