cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
default-target = "x86_64-unknown-none"

[features]
default = ["fake-time"]
fake-time = []
real-time = []
harden = ["log/max_level_off", "log/release_max_level_off"]
profiling = ["log/max_level_off", "log/release_max_level_off", "dep:profiler-types"]
lock-debugging = []

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
async-trait = "0.1.77"
bit_field = "0.10.2"
bitflags = { version = "2.4.2", features = ["bytemuck"] }
bytemuck = { version = "1.15.0", features = ["derive", "min_const_generics"] }
constants = { workspace = true, features = ["nightly"] }
crossbeam-utils = { version = "0.8.19", default-features = false }
either = { version = "1.15.0", default-features = false }
futures = { version = "0.3.30", default-features = false, features = ["async-await", "alloc"] }
intrusive-collections = { version = "0.9.7", default-features = false, features = ["alloc", "nightly"] }
kernel-macros.workspace = true
linkme = "0.3.25"
log = { version = "0.4.21", default-features = false }
log-types = { workspace = true }
pin-project = "1.1.7"
profiler-types = { workspace = true, optional = true }
static-page-tables = { workspace = true }
supervisor-services = { workspace = true }
usize_conversions = "0.2.0"
x86_64 = "0.15.1"

[lints.clippy]
new_without_default = "allow"
