cargo-features = ["per-package-target"]

[package]
name = "supervisor-snp"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-none"

[features]
harden = ["log/max_level_off", "log/release_max_level_off"]

[dependencies]
aes-gcm = { version = "0.10.3", features = ["aes", "heapless"], default-features = false }
bit_field = "0.10.2"
bytemuck = { version = "1.15.0", features = ["min_const_generics"] }
constants = { workspace = true }
io = { workspace = true }
log = { version = "0.4.21", default-features = false }
log-types = { workspace = true }
sha2 = { version = "0.10.8", default-features = false }
snp-types = { workspace = true }
spin = "0.9.8"
static-page-tables = { workspace = true }
supervisor-services = { workspace = true, features = ["supervisor"], default-features = false }
volatile = { version = "0.6.1", features = ["unstable"] }
x86_64 = "0.15.1"
