cargo-features = ["per-package-target"]

[package]
name = "supervisor"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-none"

[features]
harden = ["log/max_level_off", "log/release_max_level_off"]

[dependencies]
aes-gcm = { version = "0.10.1", features = ["aes", "heapless"], default-features = false }
bit_field = "0.10.1"
bytemuck = "1.13.0"
constants = { workspace = true }
io = { workspace = true }
log = { version = "0.4.17", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
snp-types = { workspace = true }
volatile = { version = "0.5.1", features = ["unstable"] }
x86_64 = { git = "https://github.com/rust-osdev/x86_64", rev = "1ba2dec28b0380f4b25cfaa3b62c8400d89ac82c" }
