cargo-features = ["per-package-target"]

[package]
name = "supervisor"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-none"

[features]
harden = ["log/max_level_off", "log/release_max_level_off"]

[dependencies]
aes-gcm = { version = "0.10.3", features = ["aes", "heapless"], default-features = false }
bit_field = "0.10.2"
bytemuck = "1.15.0"
constants = { workspace = true }
io = { workspace = true }
log = { version = "0.4.21", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
snp-types = { workspace = true }
static-page-tables = { workspace = true }
volatile = { version = "0.5.1", features = ["unstable"] }
x86_64 = "0.15.1"
