[package]
name = "tests"
version = "0.1.0"
edition.workspace = true

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive", "min_const_generics"] }
nix = { version = "0.30.1", features = ["event", "feature", "fs", "mman", "net", "personality", "poll", "ptrace", "signal", "socket", "time", "uio"] }
